# emb.opencvbenchmark

./: .gitignore  Makefile.am  README.md  configure.ac
src/: fakealgo.cpp
